--- a/index.html
+++ b/index.html
@@ -23,21 +23,19 @@
         <img src="imgs/logo.png" height="30px">
         <nav id="nav-bar">
             <ul id="nav-ul">
-                <a href="#about-me">
-                    <li>Sobre</li>
-                </a>
-                <a href="#skills-id">
-                    <li>Habilidades</li>
-                </a>
-                <a href="#certificates">
-                    <li>Cursos</li>
-                </a>
-                <a href="">
-                    <li>Contato</li>
-                </a>
-                <a href="https://github.com/matEvangelista" target="_blank">
-                    <li>Projetos</li>
-                </a>
+                <li>
+                    <a href="#about-me">Sobre</a>
+                </li>
+                <li><a href="#skills-id">Habilidades</a></li>
+                <li>
+                    <a href="#certificates">Cursos</a>
+                </li>
+                <li>
+                    <a href="#contato">Contato</a>
+                </li>
+                <li>
+                    <a href="https://github.com/matEvangelista" target="_blank">Projetos</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -116,17 +114,26 @@
             </div>
         </section>
         <section class="projects">
-            <div id="project-link">
-                <a href="https://github.com/matEvangelista" target="_blank" style="text-align: center">
-                    <h2 class="main-h2"><i class="devicon-github-original"></i> Ver projetos</h2>
-                </a>
-            </div>
+            <a href="https://github.com/matEvangelista" target="_blank" id="project-link">
+                <i class="devicon-github-original" id="project-icon"></i>
+                <h2 class="main-h2"> Ver projetos</h2>
+            </a>
         </section>
-        <section class="form">
-            <form action="https://formsubmit.co/mateus.evangelista.alcantara@gmail.com" method="POST">
-                <input type="text" name="name" required>
-                <input type="email" name="email" required>
-                <button type="submit">Send</button>
+        <section class="form" id="contato">
+            <h2 class="main-h2">Entre em contato comigo</h2>
+            <form id="contactform" action="https://formsubmit.io/send/put your email here" method="POST">
+                <div class="input">
+                    <label for="name">Digite seu nome:</label><input name="name" type="text" id="name"
+                        placeholder="Remetente" required>
+                </div>
+                <div class="input">
+                    <label for="email">Digite seu email:</label><input name="email" type="email" id="email"
+                        placeholder="E-mail" required>
+                </div>
+                <textarea name="comment" id="comment" rows="5" placeholder="Digite sua mensagem aqui"
+                    required></textarea>
+                <input name="_formsubmit_id" type="text" style="display:none">
+                <input value="Enviar" type="submit">
             </form>
         </section>
     </main>
