--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
   <meta property="og:title" content="Portfólio Mateus Evangelista">
   <meta name="description" content="Página com meus projetos e seção para contato.">
   <meta property="og:description" content="Página com meus projetos e seção para contato.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://matevangelista.github.io/">
+  <meta property="og:image" content="bg.png"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
   <!--
       manifest.json provides metadata used when your web app is installed on a
