--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
   <meta property="og:description" content="Página com meus projetos e seção para contato.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://matevangelista.github.io/">
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   <meta property="og:image"
     content="https://raw.githubusercontent.com/matEvangelista/matevangelista.github.io/react-2/public/bg.png" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
