--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   <meta property="og:image"
     content="https://raw.githubusercontent.com/matEvangelista/matevangelista.github.io/react-2/public/bg.png" />
+  <meta property='og:image:width' content='1920' />
+  <meta property='og:image:height' content='1080' />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
   <!--
       manifest.json provides metadata used when your web app is installed on a
